Fixed navbar invisible content blocking out page content clickability when near top of page

--- a/DreamworldHomepage/Content/styles/_navigation.scss
+++ b/DreamworldHomepage/Content/styles/_navigation.scss
@@ -42,8 +42,6 @@
         }
 
         #logo {
-            height: 160px;
-
             & > img {
                 width: 160px;
                 transition: all .5s linear;
